--- a/vercel.json
+++ b/vercel.json
@@ -6,4 +6,10 @@
     "use" : "@vercel/node"
 }
 ] ,
-"rewrites": [{ "source": "/(.*)", "destination": "/index.js" }] }
+"rewrites": [{ "source": "/(.*)", "destination": "/index.js" }],
+
+"types" :{
+    "text/css css"
+}
+
+}
