--- a/vercel.json
+++ b/vercel.json
@@ -6,12 +6,8 @@
     "use" : "@vercel/node"
 }
 ] ,
-"rewrites": [{ "source": "/(.*)", "destination": "/index.js" }],
+"rewrites": [{ "source": "/(.*)", "destination": "/index.js" }]
 
-"types" :{
 
-    
-    
-}
 
 }
